exports[`PhotoBoard component should render correctly a loading view if isFetching is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_fetching" />
</div>
`;

exports[`PhotoBoard component should render correctly a loading view if isIndexing is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_indexing" />
</div>
`;

exports[`PhotoBoard component should render correctly a loading view if isWorking is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_upload" />
</div>
`;

exports[`PhotoBoard component should render correctly a timeline of photos according a photos array 1`] = `
<div
  className=""
  role="contentinfo">
  <PhotoList
    containerWidth={undefined}
    onPhotoToggle={undefined}
    photos={
      Array [
        Object {
          "_id": "33dda00f0eec15bc3b3c59a615001ac8",
          "dir_id": "22545465ezfzef4664686446648684",
          "metadata": Object {
            "datetime": "0001-01-01T00:00:00Z",
          },
          "name": "MonImage.jpg",
          "size": "150000",
          "updated_at": "0001-01-01T00:00:00Z",
        },
      ]
    }
    selected={Array []}
    title="2017-01-01" />
</div>
`;

exports[`PhotoBoard component should render correctly a timeline of photos according a photos array in album context 1`] = `
<div
  className=""
  role="contentinfo">
  <PhotoList
    containerWidth={undefined}
    onPhotoToggle={undefined}
    photos={
      Array [
        Object {
          "_id": "33dda00f0eec15bc3b3c59a615001ac8",
          "dir_id": "22545465ezfzef4664686446648684",
          "metadata": Object {
            "datetime": "0001-01-01T00:00:00Z",
          },
          "name": "MonImage.jpg",
          "size": "150000",
          "updated_at": "0001-01-01T00:00:00Z",
        },
      ]
    }
    selected={Array []}
    title="2017-01-01" />
</div>
`;

exports[`PhotoBoard component should render correctly an empty view if photos is empty 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    emptyType="timeline_photos" />
</div>
`;
